[tool.poetry]
name = "unit-test-code-gen"
version = "0.1.0"
description = "unit test code generation by llm"
authors = ["jitingxu1 <jack9527xu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.14.4"
peft = "^0.5.0"
transformers = "^4.32.1"
fire = "^0.5.0"
huggingface-hub = "^0.16.4"
accelerate = "^0.22.0"
bitsandbytes = "^0.41.1"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
